otherservices/k8s/diettrack-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #4 changes
  name: diettrack-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: diettrack-mongo
  template: 
    metadata:
      labels: 
        app: diettrack-mongo
    spec: 
      containers:
        - name: diettrack-mongo
          image: mongo
