otherservices/k8s/exerciseschedule-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #4 changes
  name: exerciseschedule-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: exerciseschedule-mongo
  template: 
    metadata:
      labels: 
        app: exerciseschedule-mongo
    spec: 
      containers:
        - name: exerciseschedule-mongo
          image: mongo
