otherservices/k8s/nutritionschedule-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #4 changes
  name: nutritionschedule-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: nutritionschedule-mongo
  template: 
    metadata:
      labels: 
        app: nutritionschedule-mongo
    spec: 
      containers:
        - name: nutritionschedule-mongo
          image: mongo
