otherservices/k8s/track-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #4 changes
  name: track-mongo-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: track-mongo
  template: 
    metadata:
      labels: 
        app: track-mongo
    spec: 
      containers:
        - name: track-mongo
          image: mongo
