otherservices/k8s/track-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: track-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: track
  template:
    metadata: 
      labels:
        app: track
    spec: 
      containers:
        - name: track
          image: noman173652/track
---
apiVersion: v1
kind: Service
metadata:
  name: track-srv
spec: 
  selector:
    app: track
  ports:
    - name: track
      protocol: TCP
      port: 3033
      targetPort: 3033
